doc: 분산락데이터 저장소를 aws memorydb로 변경.

--- a/docs/인프라구성도.md
+++ b/docs/인프라구성도.md
@@ -20,7 +20,7 @@ flowchart LR
         EKS["Amazon EKS<br>API &amp; WORKER"]
         RDS[("Amazon RDS for MySQL")]
         VALKEY_CACHE[("ElastiCache Valkey<br>Cache")]
-        VALKEY_LOCK[("ElastiCache Valkey<br>Lock")]
+        MEMORYDB_DISTRIBUTE_LOCK[("Amazon MemoryDB<br>for Redis (Lock)")]
         MSK[("Amazon MSK")]
     end
     subgraph VPC["전용 VPC"]
@@ -40,7 +40,7 @@ flowchart LR
     EKS <-- 캐싱 --> VALKEY_CACHE
     EKS <-- 메시징 --> MSK
     EKS <--> RDS
-    EKS <-- 분산락 --> VALKEY_LOCK
+    EKS <-- 분산락 --> MEMORYDB_DISTRIBUTE_LOCK
     CF -.-> CW
     EKS -.-> CW
     RDS -.-> CW
@@ -58,7 +58,7 @@ flowchart LR
 - Ingress/로드밸런서: AWS Load Balancer Controller + Ingress (ALB + Target Group)
   - IngressClass=alb, targetType=ip 권장
 - 컴퓨팅: Amazon EKS (API/Consumer 워크로드)
-- 캐시: ElastiCache for Valkey (Cache), 분산락: ElastiCache for Valkey (Lock)
+- 캐시: ElastiCache for Valkey (Cache), 분산락: Amazon MemoryDB for Redis (Lock)
 - 메시징: Amazon MSK (Kafka)
 - 데이터베이스: Amazon RDS for MySQL (Multi-AZ)
 - 네트워크: 전용 VPC, 퍼블릭/프라이빗 서브넷, NAT 게이트웨이(아웃바운드)
@@ -66,11 +66,11 @@ flowchart LR
 
 ## 트래픽 흐름(요약)
 1) Client -> Route 53 -> CloudFront -> ALB -> Ingress/TG -> EKS(API)
-2) EKS(API): 필요 시 Lock 획득(Valkey-Lock) -> Cache 조회/미스 시 RDS 조회 -> 응답/캐시(Valkey-Cache)
+2) EKS(API): 필요 시 Lock 획득(MemoryDB-Lock) -> Cache 조회/미스 시 RDS 조회 -> 응답/캐시(Valkey-Cache)
 3) 주문 완료: EKS(API) -> MSK 생산, EKS(Consumer) <- MSK 소비
 4) 아웃바운드: EKS -> NAT -> Internet
 
 ## 확장/가용성/보안(요약)
-- HPA/Cluster Autoscaler, RDS Multi-AZ, ElastiCache Replica, MSK 다중 AZ
+- HPA/Cluster Autoscaler, RDS Multi-AZ, ElastiCache Replica(캐시), MemoryDB 다중 AZ(락), MSK 다중 AZ
 - SG 최소권한, IRSA, 전송구간/정지 시 암호화, WAF(선택)
 - 모니터링: CloudWatch 지표/로그, 알람
