test: 쿠폰 기능에 추가적인 테스트 검증 및 문서를 추가.

--- a/docs/동시성-이슈-현황.md
+++ b/docs/동시성-이슈-현황.md
@@ -282,3 +282,153 @@ fun reduceStock(id: Long, quantity: Int): Int  // 영향받은 행 수 반환
 ### 우선순위
 1. 🔴 **긴급**: 재고 Overselling 방지 (TC-STK-001, TC-STK-002)
 2. 🟠 **높음**: 잔액 충전 Lost Update 방지 (TC-BAL-001)
+
+---
+
+## 9. 쿠폰 동시성 분석
+
+### 9.1 쿠폰 발급 (선착순 쿠폰)
+
+#### 현재 구현
+
+```kotlin
+// CouponIssuanceFacade.kt
+@Transactional
+override fun issue(memberId: Long, couponSummaryId: Long, now: LocalDateTime): Coupon {
+    val issuance = issuanceOutput
+        .findByCouponSummaryIdWithLock(couponSummaryId)  // ← Pessimistic Lock 적용
+        .orElseThrow { ... }
+
+    // 정책 검증 (OnePerMember 등)
+    issuancePolicyOutput
+        .findAllByCouponIssuanceId(issuance.id!!)
+        .forEach { it.canIssue(memberId, summary) }
+
+    val updatedIssuance = issuance.issue(now)  // issuedCount += 1
+    issuanceOutput.save(updatedIssuance)
+
+    return Coupon.create(...).let(couponOutput::save)
+}
+```
+
+#### 동시성 보호 상태: ✅ 안전
+
+| 시나리오 | 보호 여부 | 설명 |
+|----------|----------|------|
+| 선착순 100개 쿠폰에 101명 동시 요청 | ✅ 보호됨 | CouponIssuance Lock으로 순차 처리 |
+| 동일 회원 중복 발급 (OnePerMember 정책) | ✅ 보호됨 | Lock 후 정책 검증으로 중복 방지 |
+
+#### 동작 흐름
+```
+T1: 요청A - Lock(CouponIssuance) 획득
+T2: 요청B - Lock 대기...
+T3: 요청A - issuedCount 확인 (99) → 통과 → 100으로 증가 → Commit
+T4: 요청B - Lock 획득
+T5: 요청B - issuedCount 확인 (100) → maxCount 도달 → 실패
+
+결과: 정확히 maxCount만큼만 발급
+```
+
+---
+
+### 9.2 쿠폰 사용 (주문 시)
+
+#### 현재 구현
+
+```kotlin
+// PlaceOrderFacade.kt
+@Transactional
+fun placeOrder(...) {
+    val member = memberOutput.findByIdWithLock(memberId)  // ← Member Lock 획득
+
+    // 쿠폰 사용 (Lock 보호 하에 실행)
+    val coupon = couponSummaryId?.let {
+        myCouponUseCase.using(member, it, now)
+    }
+    ...
+}
+
+// MyCouponInteractor.kt
+@Transactional
+override fun using(member: Member, couponSummaryId: Long, now: LocalDateTime): Coupon {
+    val usedCoupon = couponOutput
+        .findByCouponSummaryIdAndMemberId(couponSummaryId, member.id!!)  // 일반 조회
+        .orElseThrow { ... }
+        .using(now)  // usingAt 설정
+
+    return couponOutput.save(usedCoupon)
+}
+```
+
+#### 동시성 보호 상태: ✅ 안전 (간접 보호)
+
+| 시나리오 | 보호 여부 | 설명 |
+|----------|----------|------|
+| 동일 사용자가 같은 쿠폰으로 동시 주문 | ✅ 보호됨 | Member Lock으로 순차 처리 |
+| 다른 사용자가 같은 쿠폰 사용 | N/A | 쿠폰은 사용자별 소유 |
+
+#### 동작 흐름
+```
+T1: 요청A (회원1) - Lock(Member 1) 획득
+T2: 요청B (회원1) - Lock 대기...
+T3: 요청A - 쿠폰 사용 → usingAt 설정 → Commit
+T4: 요청B - Lock 획득
+T5: 요청B - 쿠폰 조회 → usingAt != null → "이미 사용된 쿠폰" 예외
+
+결과: 동일 쿠폰 중복 사용 방지
+```
+
+---
+
+### 9.3 잠재적 위험 영역
+
+#### 쿠폰 사용 API가 주문 외부에 존재하는 경우
+
+만약 주문 플로우가 아닌 **별도의 쿠폰 사용 API**가 있다면 동시성 이슈 발생 가능:
+
+```kotlin
+// 가상의 별도 API (현재 존재하지 않음)
+@PostMapping("/api/v1/coupons/{id}/use")
+fun useCoupon(@PathVariable id: Long) {
+    myCouponInteractor.using(...)  // Member Lock 없이 호출
+}
+```
+
+이 경우 `MyCouponInteractor.using()`이 직접 호출되면 Lock 없이 실행되어 중복 사용 가능.
+
+#### 현재 상태
+- **주문 시 쿠폰 사용**: Member Lock으로 보호됨 ✅
+- **별도 쿠폰 사용 API**: 현재 존재하지 않음 (확인 필요)
+
+---
+
+### 9.4 쿠폰 동시성 요약
+
+| 기능 | 동시성 이슈 | 보호 메커니즘 | 상태 |
+|------|------------|--------------|------|
+| 선착순 쿠폰 발급 | 수량 초과 발급 | `CouponIssuance` Pessimistic Lock | ✅ 안전 |
+| OnePerMember 정책 | 중복 발급 | Lock 후 정책 검증 | ✅ 안전 |
+| 주문 시 쿠폰 사용 | 중복 사용 | Member Lock (간접 보호) | ✅ 안전 |
+| 별도 쿠폰 사용 API | 중복 사용 | 없음 | ⚠️ 잠재적 위험 |
+
+---
+
+### 9.5 권장 개선 사항 (쿠폰)
+
+#### 쿠폰 조회 시 Lock 추가 (방어적 코딩)
+
+```kotlin
+// CouponJpaRepository.kt
+@Lock(LockModeType.PESSIMISTIC_WRITE)
+@Query("SELECT c FROM CouponJpaEntity c WHERE c.id = :id")
+fun findByIdWithLock(@Param("id") id: Long): Optional<CouponJpaEntity>
+```
+
+#### DB 제약조건 추가
+
+```sql
+-- 동일 회원의 동일 쿠폰 중복 발급 방지
+ALTER TABLE coupon
+ADD CONSTRAINT uk_member_coupon_summary
+UNIQUE (member_id, coupon_summary_id);
+```
