--- a/docs/동시성-이슈-보고서.md
+++ b/docs/동시성-이슈-보고서.md
@@ -15,7 +15,8 @@
 
 | 영역                   | 문제 유형       | 현재 상태     |
 |----------------------|-------------|-----------|
-| 잔액 충전                | Lost Update | **이슈 있음** |
+| 잔액 충전                | Lost Update | ✅ 해결됨     |
+| 잔액 차감                | Race Condition | ✅ 해결됨     |
 | 재고 감소 (1개 상품)        | Overselling | ✅ 해결됨     |
 | 재고 감소 (대량 주문)        | Overselling | ✅ 해결됨     |
 | 쿠폰 발급 (OnePerMember) | 중복 발급       | **이슈 있음** |
@@ -24,7 +25,9 @@
 
 | 영역         | 보호 메커니즘                                 | 비고         |
 |------------|-----------------------------------------|------------|
-| 잔액 차감 (주문) | Member Lock (SELECT FOR UPDATE)         | 동일 사용자만 보호 |
+| 잔액 충전      | 조건부 UPDATE                              | 원자적 처리     |
+| 잔액 차감      | 조건부 UPDATE                              | 원자적 처리     |
+| 재고 감소      | 조건부 UPDATE                              | 원자적 처리     |
 | 쿠폰 발급 (수량) | CouponIssuance Lock (SELECT FOR UPDATE) | 수량 초과 방지   |
 | 쿠폰 사용 (주문) | Member Lock (SELECT FOR UPDATE)         | 간접 보호      |
 
@@ -135,17 +138,22 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 
 > 🚧 **검토 중**: 각 이슈별 해결 전략은 별도 검토 후 업데이트 예정입니다.
 
-### 2.1 잔액 충전 동시성 제어
+### 2.1 잔액 충전/차감 동시성 제어
 
-**후보 전략**
+**선택 전략**: 조건부 UPDATE
 
-| 전략 | 설명 | 장점 | 단점 |
-|------|------|------|------|
-| SELECT FOR UPDATE | 조회 시 row Lock 획득 | 단순, 확실한 보호 | 성능 저하, Lock 경합 |
-| 낙관적 락 (@Version) | 충돌 시 예외 발생 | 성능 좋음, Lock 없음 | 충돌 시 재시도 필요 |
-| 조건부 UPDATE | 원자적 업데이트 | 단순, 성능 좋음 | 실패 시 재시도 로직 필요 |
+**선택 근거**:
+- 원자적 처리: `UPDATE ... SET balance = balance + :amount` 또는 `UPDATE ... WHERE balance >= :amount` 로 조회-검증-수정을 단일 쿼리로 처리
+- Lock 없음: SELECT FOR UPDATE 대비 성능 우수
+- 단순한 구조: 추가 컬럼이나 복잡한 예외 처리 로직 불필요
 
-**선택 전략**: `TBD`
+**구현 방안**:
+1. `MemberBalanceJpaRepository`에 조건부 UPDATE 쿼리 추가
+   - `rechargeBalance()`: `SET balance = balance + :amount WHERE id = :id`
+   - `reduceBalanceByMemberId()`: `SET balance = balance - :amount WHERE member.id = :memberId AND balance >= :amount`
+2. `MyBalanceOutput`에 `atomicRecharge()`, `atomicReduceByMemberId()` 메서드 추가
+3. `MyBalanceInteractor`에서 조건부 UPDATE 사용
+4. 영향받은 행이 0이면 잔액 부족 또는 잔고 없음으로 처리
 
 ---
 
@@ -184,8 +192,8 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 
 | 테스트 | 결과 | 동시성 이슈 |
 |--------|------|-------------|
-| 잔액 충전 동시성 제어 | ❌ 실패 | **있음** |
-| 잔액 차감 동시성 제어 (주문) | ✅ 통과 | 없음 (Member Lock) |
+| 잔액 충전 동시성 제어 | ✅ 통과 | 없음 (조건부 UPDATE) |
+| 잔액 차감 동시성 제어 (주문) | ✅ 통과 | 없음 (조건부 UPDATE) |
 | 재고 감소 동시성 제어 (1개 상품) | ✅ 통과 | 없음 (조건부 UPDATE) |
 | 재고 감소 동시성 제어 (대량 주문) | ✅ 통과 | 없음 (조건부 UPDATE) |
 | 쿠폰 발급 동시성 제어 (수량 제한) | ✅ 통과 | 없음 (CouponIssuance Lock) |
@@ -197,10 +205,19 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 #### 잔액 충전 동시성 제어
 
 ```
-❌ 실패
-- 기대값: 18,000원
-- 실제값: 13,000원 (또는 15,000원)
-- 손실 금액: 5,000원 (또는 3,000원)
+✅ 통과 (조건부 UPDATE 적용)
+- 기대: 18,000원 (10,000 + 5,000 + 3,000)
+- 실제: 18,000원
+- 해결 방법: atomicRecharge() - SET balance = balance + :amount
+```
+
+#### 잔액 차감 동시성 제어
+
+```
+✅ 통과 (조건부 UPDATE 적용)
+- 기대: 1명 성공, 1명 실패 (잔액 부족)
+- 실제: 1명 성공, 1명 실패
+- 해결 방법: atomicReduceByMemberId() - WHERE balance >= :amount
 ```
 
 #### 재고 감소 동시성 제어 (1개 상품)
@@ -269,3 +286,4 @@ src/test/resources/sql/
 |------|--------|------|
 | 2025-12-22 | - | 초기 문서 작성, 문제상황 분석 완료 |
 | 2025-12-22 | - | 재고 감소 동시성 이슈 해결 (조건부 UPDATE 적용) |
+| 2025-12-23 | - | 잔액 충전/차감 동시성 이슈 해결 (조건부 UPDATE 적용) |
