--- a/docs/동시성-이슈-보고서.md
+++ b/docs/동시성-이슈-보고서.md
@@ -13,13 +13,15 @@
 
 시스템 내 동시성 처리가 필요한 영역에서 **4건의 동시성 이슈**가 존재
 
-| 영역                   | 문제 유형       | 현재 상태     |
-|----------------------|-------------|-----------|
-| 잔액 충전                | Lost Update | ✅ 해결됨     |
-| 잔액 차감                | Race Condition | ✅ 해결됨     |
-| 재고 감소 (1개 상품)        | Overselling | ✅ 해결됨     |
-| 재고 감소 (대량 주문)        | Overselling | ✅ 해결됨     |
-| 쿠폰 발급 (OnePerMember) | 중복 발급       | **이슈 있음** |
+| 영역             | 문제 유형       | 현재 상태     |
+|----------------|-------------|-----------|
+| 잔액 충전          | Lost Update | ✅ 해결됨     |
+| 잔액 차감          | Race Condition | ✅ 해결됨     |
+| 재고 감소 (1개 상품)  | Overselling | ✅ 해결됨     |
+| 재고 감소 (대량 주문)  | Overselling | ✅ 해결됨     |
+| 쿠폰 발급 (선착순 수량) | 초과 발급       | ✅ 해결됨     |
+| 쿠폰 발급 (1인당 1개) | 중복 발급       | ✅ 해결됨     |
+| 쿠폰 사용 (주문)     | 중복 사용       | ✅ 해결됨     |
 
 ### 1.2 현재 적용된 동시성 제어
 
@@ -28,8 +30,9 @@
 | 잔액 충전      | 조건부 UPDATE                              | 원자적 처리     |
 | 잔액 차감      | 조건부 UPDATE                              | 원자적 처리     |
 | 재고 감소      | 조건부 UPDATE                              | 원자적 처리     |
-| 쿠폰 발급 (수량) | CouponIssuance Lock (SELECT FOR UPDATE) | 수량 초과 방지   |
-| 쿠폰 사용 (주문) | Member Lock (SELECT FOR UPDATE)         | 간접 보호      |
+| 쿠폰 발급 (수량) | 조건부 UPDATE                              | 수량 초과 방지   |
+| 쿠폰 발급 (중복) | DB Unique 제약 (`uk_coupon_member_summary`) | 중복 발급 방지   |
+| 쿠폰 사용      | 조건부 UPDATE                              | 중복 사용 방지   |
 
 ---
 
@@ -101,13 +104,13 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 
 ---
 
-#### 1.3.3 쿠폰 발급 동시성 이슈 (OnePerMember)
+#### 1.3.3 쿠폰 발급 동시성 이슈 (1인당 1개 발급)
 
 **문제 코드 위치**: `CouponIssuanceFacade.issue()` 내 정책 검증
 
 **시나리오**
 ```
-초기 상태: OnePerMember 정책 쿠폰, 사용자 C에게 미발급
+초기 상태: 1인당 1개 발급 정책 쿠폰, 사용자 C에게 미발급
 
 [동시 요청 - 동일 사용자]
 - 요청 1: 쿠폰 발급 (idempotency-key-1)
@@ -124,7 +127,7 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 요청2: ── SELECT 쿠폰(0개) ── 정책검증(✓) ── INSERT
 
 문제: CouponIssuance Lock은 수량만 보호,
-      OnePerMember 정책의 기발급 여부 체크는 Lock 없이 수행됨
+      1인당 1개 발급 정책의 기발급 여부 체크는 Lock 없이 수행됨
 ```
 
 **비즈니스 영향**
@@ -135,8 +138,6 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 ---
 
 ## 2. 해결전략
-
-> 🚧 **검토 중**: 각 이슈별 해결 전략은 별도 검토 후 업데이트 예정입니다.
 
 ### 2.1 잔액 충전/차감 동시성 제어
 
@@ -172,17 +173,23 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 
 ---
 
-### 2.3 쿠폰 발급 동시성 제어 (OnePerMember)
+### 2.3 쿠폰 발급 동시성 제어
 
-**후보 전략**
+**선택 전략**: 조건부 UPDATE + DB Unique 제약
 
-| 전략 | 설명 | 장점 | 단점 |
-|------|------|------|------|
-| DB Unique 제약 | member_id + coupon_summary_id | 확실한 보호, DB 레벨 | 예외 처리 필요 |
-| SELECT FOR UPDATE | 회원 + 쿠폰 조합 Lock | 유연함 | Lock 복잡도 증가 |
-| 조건부 INSERT | INSERT ... SELECT WHERE NOT EXISTS | 원자적 처리 | 쿼리 복잡도 |
+**선택 근거**:
+- 선착순 수량 제한: 조건부 UPDATE로 `issuedCount < maxCount` 조건 체크
+-  중복 발급: DB Unique 제약으로 `member_id + coupon_summary_id` 조합 중복 방지
+- 쿠폰 사용 중복 방지: 조건부 UPDATE로 `usingAt IS NULL` 조건 체크
 
-**선택 전략**: `TBD`
+**구현 방안**:
+1. `CouponIssuanceJpaRepository.atomicIssue()`: 조건부 UPDATE 쿼리
+   - `SET issuedCount = issuedCount + 1 WHERE issuedCount < maxCount AND startAt <= now AND endAt >= now`
+2. `CouponJpaEntity`에 Unique 제약 추가
+   - `@UniqueConstraint(name = "uk_coupon_member_summary", columnNames = ["member_id", "coupon_summary_id"])`
+3. `CouponPersistenceAdapter.save()`에서 `DataIntegrityViolationException` 발생 시 `ConflictResourceException` throw
+4. `CouponJpaRepository.atomicUse()`: 조건부 UPDATE 쿼리
+   - `SET usingAt = :now WHERE memberId = :memberId AND couponSummaryId = :couponSummaryId AND usingAt IS NULL`
 
 ---
 
@@ -190,15 +197,15 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 
 ### 3.1 테스트 실행 요약
 
-| 테스트 | 결과 | 동시성 이슈 |
-|--------|------|-------------|
-| 잔액 충전 동시성 제어 | ✅ 통과 | 없음 (조건부 UPDATE) |
-| 잔액 차감 동시성 제어 (주문) | ✅ 통과 | 없음 (조건부 UPDATE) |
-| 재고 감소 동시성 제어 (1개 상품) | ✅ 통과 | 없음 (조건부 UPDATE) |
-| 재고 감소 동시성 제어 (대량 주문) | ✅ 통과 | 없음 (조건부 UPDATE) |
-| 쿠폰 발급 동시성 제어 (수량 제한) | ✅ 통과 | 없음 (CouponIssuance Lock) |
-| 쿠폰 발급 동시성 제어 (OnePerMember) | ❌ 실패 | **있음** |
-| 쿠폰 사용 동시성 제어 (주문) | ✅ 통과 | 없음 (Member Lock) |
+| 테스트                    | 결과 | 동시성 이슈 |
+|------------------------|------|-------------|
+| 잔액 충전 동시성 제어           | ✅ 통과 | 없음 (조건부 UPDATE) |
+| 잔액 차감 동시성 제어 (주문)      | ✅ 통과 | 없음 (조건부 UPDATE) |
+| 재고 감소 동시성 제어 (1개 상품)   | ✅ 통과 | 없음 (조건부 UPDATE) |
+| 재고 감소 동시성 제어 (대량 주문)   | ✅ 통과 | 없음 (조건부 UPDATE) |
+| 쿠폰 발급 동시성 제어 (수량 제한)   | ✅ 통과 | 없음 (조건부 UPDATE) |
+| 쿠폰 발급 동시성 제어 (중복발급 제한) | ✅ 통과 | 없음 (DB Unique 제약) |
+| 쿠폰 사용 동시성 제어 (주문)      | ✅ 통과 | 없음 (조건부 UPDATE) |
 
 ### 3.2 테스트별 상세 결과
 
@@ -236,13 +243,31 @@ Thread 2 (User B): LOCK(member_B) ── 재고확인(1) ── 차감 ── CO
 - 실제: 재고 한도 내에서만 주문 성공
 ```
 
-#### 쿠폰 발급 동시성 제어 (OnePerMember)
+#### 쿠폰 발급 동시성 제어 (수량 제한)
 
 ```
-❌ 실패
+✅ 통과 (조건부 UPDATE 적용)
+- 기대: 1명 성공, 1명 실패 (maxCount 초과)
+- 실제: 1명 성공, 1명 실패
+- 해결 방법: atomicIssue() - SET issuedCount = issuedCount + 1 WHERE issuedCount < maxCount
+```
+
+#### 쿠폰 발급 동시성 제어 (중복발급 제한)
+
+```
+✅ 통과 (DB Unique 제약 적용)
 - 기대: 1건 성공, 1건 실패
-- 실제: 2건 모두 성공
-- 해당 회원 쿠폰: 2개 (1개여야 함)
+- 실제: 1건 성공, 1건 실패 (이미 발급된 쿠폰)
+- 해결 방법: DB Unique 제약 (uk_coupon_member_summary) + DataIntegrityViolationException 예외 처리
+```
+
+#### 쿠폰 사용 동시성 제어 (주문)
+
+```
+✅ 통과 (조건부 UPDATE 적용)
+- 기대: 1건 성공, 1건 실패 (이미 사용된 쿠폰)
+- 실제: 1건 성공, 1건 실패
+- 해결 방법: atomicUse() - SET usingAt = :now WHERE usingAt IS NULL
 ```
 
 ---
@@ -275,15 +300,3 @@ src/test/resources/sql/
 ./gradlew test --tests "StockConcurrencyIntegrationTest"
 ./gradlew test --tests "CouponConcurrencyIntegrationTest"
 ```
-
----
-
-## 부록
-
-### 변경 이력
-
-| 날짜 | 작업자 | 내용 |
-|------|--------|------|
-| 2025-12-22 | - | 초기 문서 작성, 문제상황 분석 완료 |
-| 2025-12-22 | - | 재고 감소 동시성 이슈 해결 (조건부 UPDATE 적용) |
-| 2025-12-23 | - | 잔액 충전/차감 동시성 이슈 해결 (조건부 UPDATE 적용) |
