fix: 예외 wrapping 설정 및 문서 수정.

--- a/docs/동시성-이슈-보고서.md
+++ b/docs/동시성-이슈-보고서.md
@@ -11,7 +11,7 @@
 
 ### 1.1 개요
 
-시스템 내 동시성 처리가 필요한 영역에서 **4건의 동시성 이슈**가 존재
+시스템 내 동시성 처리가 필요한 영역에서 동시성 이슈가 발생할수있는 부분이 아래와 같이 존재
 
 | 영역             | 문제 유형       | 현재 상태     |
 |----------------|-------------|-----------|
@@ -24,6 +24,8 @@
 | 쿠폰 사용 (주문)     | 중복 사용       | ✅ 해결됨     |
 
 ### 1.2 현재 적용된 동시성 제어
+
+아래와 같은 방법으로 동시성 이슈를 보호
 
 | 영역         | 보호 메커니즘                                 | 비고         |
 |------------|-----------------------------------------|------------|
